--- a/app/src/main/res/values/custom_styles.xml
+++ b/app/src/main/res/values/custom_styles.xml
@@ -5,7 +5,7 @@
         <item name="cornerSize">10%</item>
     </style>
 
-    <style name="rectangle">
+   <!-- <style name="rectangle">
         <item name="">
             <shape android:shape="rectangle">
                 <solid android:color="#F44336"/>
@@ -17,5 +17,5 @@
                 <solid android:color="#FFEB3B"/>
             </shape>
         </item>
-    </style>
+    </style>-->
 </resources>
