--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_splashFragment_to_signupFragment"
             app:destination="@id/signupFragment" />
+        <action
+            android:id="@+id/action_splashFragment_to_ExamSheduleFragment"
+            app:destination="@id/ExamSheduleFragment" />
     </fragment>
     <fragment
         android:id="@+id/signupFragment"
@@ -60,4 +63,9 @@
         android:name="ps.room.redcard.NewsFragment"
         android:label="fragment_news"
         tools:layout="@layout/fragment_news" />
+    <fragment
+        android:id="@+id/ExamSheduleFragment"
+        android:name="ps.room.redcard.ExamScheduleFragment"
+        android:label="fragment_exam_schedule"
+        tools:layout="@layout/fragment_exam_schedule" />
 </navigation>
