Complete How to / News layout, recycler view, adapter

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,12 @@
         <action
             android:id="@+id/action_splashFragment_to_ExamSheduleFragment"
             app:destination="@id/ExamSheduleFragment" />
+        <action
+            android:id="@+id/action_splashFragment_to_issueACardFragment"
+            app:destination="@id/issueACardFragment" />
+        <action
+            android:id="@+id/action_splashFragment_to_HowToFragment"
+            app:destination="@id/HowToFragment" />
     </fragment>
     <fragment
         android:id="@+id/signupFragment"
@@ -68,4 +74,9 @@
         android:name="ps.room.redcard.ExamScheduleFragment"
         android:label="fragment_exam_schedule"
         tools:layout="@layout/fragment_exam_schedule" />
+    <fragment
+        android:id="@+id/HowToFragment"
+        android:name="ps.room.redcard.HowToFragment"
+        android:label="fragment_how_to"
+        tools:layout="@layout/fragment_how_to" />
 </navigation>
