added more screens

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="red_10">#2F0404</color>
     <color name="dark">#0B0A0A</color>
     <color name="red60">#F04242</color>
+    <color name="green">#0F7544</color>
+    <color name="light_brown">#413A3A</color>
 </resources>
