--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -60,4 +60,14 @@
         android:name="ps.room.redcard.NewsFragment"
         android:label="fragment_news"
         tools:layout="@layout/fragment_news" />
+    <fragment
+        android:id="@+id/historyFragment"
+        android:name="ps.room.redcard.HistoryFragment"
+        android:label="fragment_history"
+        tools:layout="@layout/fragment_history" />
+    <fragment
+        android:id="@+id/listOfOffenseFragment"
+        android:name="ps.room.redcard.ListOfOffenseFragment"
+        android:label="fragment_list_of_offense"
+        tools:layout="@layout/fragment_list_of_offense" />
 </navigation>
