--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -171,7 +171,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ConfirmPasswordContainer" />
 
     <Button
-        android:id="@+id/log_in_auth"
+        android:id="@+id/sign_up_auth"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
@@ -201,7 +201,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/signupSignin"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/log_in_auth"
+        app:layout_constraintTop_toBottomOf="@+id/sign_up_auth"
         tools:ignore="TextContrastCheck" />
 
     <TextView
@@ -215,6 +215,6 @@
         android:textColor="@color/red"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/signuptextView6"
-        app:layout_constraintTop_toBottomOf="@+id/log_in_auth" />
+        app:layout_constraintTop_toBottomOf="@+id/sign_up_auth" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
