--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/splashFragment">
+    app:startDestination="@id/issueACardFragment">
 
     <fragment
         android:id="@+id/splashFragment"
@@ -39,7 +39,11 @@
         android:id="@+id/loginFragment"
         android:name="ps.room.redcard.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
+    </fragment>
     <fragment
         android:id="@+id/successFragment"
         android:name="ps.room.redcard.SuccessFragment"
@@ -53,17 +57,47 @@
         android:id="@+id/dashboardFragment"
         android:name="ps.room.redcard.DashboardFragment"
         android:label="fragment_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard" >
+        <action
+            android:id="@+id/action_dashboardFragment_to_ExamSheduleFragment"
+            app:destination="@id/ExamSheduleFragment" />
+        <action
+            android:id="@+id/action_dashboardFragment_to_HowToFragment"
+            app:destination="@id/HowToFragment" />
+        <action
+            android:id="@+id/action_dashboardFragment_to_invigilatorFragment"
+            app:destination="@id/invigilatorFragment" />
+        <action
+            android:id="@+id/action_dashboardFragment_to_historyFragment"
+            app:destination="@id/historyFragment" />
+    </fragment>
     <fragment
         android:id="@+id/invigilatorFragment"
         android:name="ps.room.redcard.InvigilatorFragment"
         android:label="fragment_invigilator"
-        tools:layout="@layout/fragment_invigilator" />
+        tools:layout="@layout/fragment_invigilator" >
+        <action
+            android:id="@+id/action_invigilatorFragment_to_listOfOffenseFragment"
+            app:destination="@id/listOfOffenseFragment" />
+        <action
+            android:id="@+id/action_invigilatorFragment_to_downloadImageFragment"
+            app:destination="@id/downloadImageFragment" />
+        <action
+            android:id="@+id/action_invigilatorFragment_to_captureAttendanceFragment"
+            app:destination="@id/captureAttendanceFragment" />
+    </fragment>
     <fragment
         android:id="@+id/issueACardFragment"
         android:name="ps.room.redcard.IssueACardFragment"
         android:label="fragment_issue_a_card"
-        tools:layout="@layout/fragment_issue_a_card" />
+        tools:layout="@layout/fragment_issue_a_card" >
+        <action
+            android:id="@+id/action_issueACardFragment_self"
+            app:destination="@id/issueACardFragment" />
+        <action
+            android:id="@+id/action_issueACardFragment_to_historyFragment"
+            app:destination="@id/historyFragment" />
+    </fragment>
     <fragment
         android:id="@+id/newsFragment"
         android:name="ps.room.redcard.NewsFragment"
@@ -78,7 +112,11 @@
         android:id="@+id/HowToFragment"
         android:name="ps.room.redcard.HowToFragment"
         android:label="fragment_how_to"
-        tools:layout="@layout/fragment_how_to" />
+        tools:layout="@layout/fragment_how_to" >
+        <action
+            android:id="@+id/action_HowToFragment_to_newsFragment"
+            app:destination="@id/newsFragment" />
+    </fragment>
         android:id="@+id/historyFragment"
         android:name="ps.room.redcard.HistoryFragment"
         android:label="fragment_history"
@@ -87,5 +125,24 @@
         android:id="@+id/listOfOffenseFragment"
         android:name="ps.room.redcard.ListOfOffenseFragment"
         android:label="fragment_list_of_offense"
-        tools:layout="@layout/fragment_list_of_offense" />
+        tools:layout="@layout/fragment_list_of_offense" >
+        <action
+            android:id="@+id/action_listOfOffenseFragment_to_issueACardFragment"
+            app:destination="@id/issueACardFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/historyFragment"
+        android:name="ps.room.redcard.HistoryFragment"
+        android:label="fragment_history"
+        tools:layout="@layout/fragment_history" />
+    <fragment
+        android:id="@+id/downloadImageFragment"
+        android:name="ps.room.redcard.DownloadImageFragment"
+        android:label="fragment_download_image"
+        tools:layout="@layout/fragment_download_image" />
+    <fragment
+        android:id="@+id/captureAttendanceFragment"
+        android:name="ps.room.redcard.CaptureAttendanceFragment"
+        android:label="fragment_capture_attendance"
+        tools:layout="@layout/fragment_capture_attendance" />
 </navigation>
