--- a/app/src/main/res/layout/fragment_invigilator.xml
+++ b/app/src/main/res/layout/fragment_invigilator.xml
@@ -8,7 +8,7 @@
 
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/examScheduleCV"
+        android:id="@+id/issueACardCV"
         android:layout_width="156dp"
         android:layout_height="178dp"
         android:layout_marginTop="95dp"
@@ -42,14 +42,14 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/howToCV"
+        android:id="@+id/classListCV"
         android:layout_width="156dp"
         android:layout_height="178dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="95dp"
         app:cardElevation="5dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/examScheduleCV"
+        app:layout_constraintStart_toEndOf="@+id/issueACardCV"
         app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
@@ -74,14 +74,14 @@
 
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/historyCV"
+        android:id="@+id/attendanceCV"
         android:layout_width="156dp"
         android:layout_height="178dp"
         android:layout_marginTop="60dp"
         app:cardElevation="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/examScheduleCV">
+        app:layout_constraintTop_toBottomOf="@+id/issueACardCV">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -92,7 +92,6 @@
                 android:id="@+id/historyTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/dashboardHistoryIconIV"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="25dp"
                 android:fontFamily="@font/montserrat"
