--- a/app/src/main/res/layout/fragment_list_of_offense.xml
+++ b/app/src/main/res/layout/fragment_list_of_offense.xml
@@ -23,6 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listOfOffenseRV"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="36dp"
