--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -132,7 +132,7 @@
         app:layout_constraintTop_toBottomOf="@+id/LoginPasswordContainer" />
 
     <Button
-        android:id="@+id/log_in_auth"
+        android:id="@+id/loginB"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
