--- a/app/src/main/res/layout/fragment_past.xml
+++ b/app/src/main/res/layout/fragment_past.xml
@@ -35,6 +35,8 @@
                         android:id="@+id/linearLayout"
                         android:layout_width="match_parent"
                         android:layout_height="30sp"
+                        android:layout_marginBottom="4dp"
+                        app:layout_constraintBottom_toTopOf="@+id/view"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
@@ -63,6 +65,7 @@
                     </LinearLayout>
 
                     <View
+                        android:id="@+id/view"
                         android:layout_width="340sp"
                         android:layout_height="2dp"
                         android:layout_marginTop="34dp"
