--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginEnd="119dp"
         android:fontFamily="@font/montserrat"
-        android:text="Welcome,"
+        android:text="Welcome"
         android:textColor="@color/red_10"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginEnd="119dp"
         android:fontFamily="@font/montserrat"
-        android:text="Precious!"
+        android:text=""
         android:textColor="@color/red_10"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
