--- a/app/src/main/res/layout/fragment_capture_attendance.xml
+++ b/app/src/main/res/layout/fragment_capture_attendance.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,50 +9,64 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60sp"
-        android:background="#FBD0D0">
+        android:background="#FBD0D0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
             android:layout_width="24sp"
             android:layout_height="wrap_content"
-            android:src="@drawable/arrow_left"
-            android:layout_marginLeft="14sp"/>
+            android:layout_marginLeft="14sp"
+            android:src="@drawable/arrow_left" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Capture Attendance"
-            android:fontFamily="@font/montserrat"
-            android:textSize="28sp"
-            android:layout_marginTop="8sp"
             android:layout_marginLeft="16sp"
-            />
+            android:layout_marginTop="8sp"
+            android:fontFamily="@font/montserrat"
+            android:text="Capture Attendance"
+            android:textSize="28sp" />
     </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="372dp"
-            android:layout_height="443dp"
-            android:layout_marginTop="120dp"
-            android:src="@drawable/take_photo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.487"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/attendance_imageview"
+        android:layout_width="0dp"
+        android:layout_height="364dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="10dp"
+        android:src="@drawable/take_photo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+    <Button
+            android:id="@+id/button_capture_attendance"
             android:layout_width="140sp"
             android:layout_height="50sp"
-            android:layout_marginBottom="168dp"
+            android:layout_marginTop="28dp"
             android:backgroundTint="#0F7544"
-            android:text="Save"
-            android:textColor="#fff"
             android:fontFamily="@font/montserrat_semibold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="Capture"
+            android:textColor="#fff"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/attendance_imageview" />
+    <Button
+        android:id="@+id/button_save_attendance"
+        android:layout_width="140sp"
+        android:layout_height="50sp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#0F7544"
+        android:fontFamily="@font/montserrat_semibold"
+        android:text="Save"
+        android:textColor="#fff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_capture_attendance" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
