--- a/app/src/main/res/layout/fragment_invigilator.xml
+++ b/app/src/main/res/layout/fragment_invigilator.xml
@@ -42,7 +42,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/classListCV"
+        android:id="@+id/savedImagesCV"
         android:layout_width="156dp"
         android:layout_height="178dp"
         android:layout_marginStart="16dp"
@@ -63,7 +63,7 @@
                 android:layout_centerInParent="true"
                 android:layout_marginTop="25dp"
                 android:fontFamily="@font/montserrat"
-                android:text="Class List"
+                android:text="Saved Images"
                 android:textAlignment="center"
                 android:textColor="@color/dark"
                 android:textSize="18sp" />
