--- a/app/src/main/res/layout/list_of_offense_design.xml
+++ b/app/src/main/res/layout/list_of_offense_design.xml
@@ -20,14 +20,15 @@
             android:textSize="16dp" />
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="53dp"
             android:id="@+id/historyPointCV"
+            android:layout_width="53dp"
             android:layout_height="40dp"
-            app:cardBackgroundColor="@color/red"
-            app:cardElevation="0dp"
             android:layout_alignParentEnd="true"
+            android:layout_marginTop="19dp"
+            app:cardBackgroundColor="@color/red"
             app:cardCornerRadius="1dp"
-            android:layout_marginTop="19dp">
+            app:cardElevation="0dp">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -48,15 +49,16 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="53dp"
             android:layout_height="20dp"
-            app:strokeColor="@color/green"
-            app:strokeWidth="1dp"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
-            android:layout_alignParentStart="true"
             android:layout_below="@id/offenseTV"
-            android:layout_marginTop="16dp">
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="16dp"
+            android:paddingStart="8dp"
+            android:paddingTop="2dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="2dp"
+            app:strokeColor="@color/green"
+            app:strokeWidth="1dp">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -65,10 +67,10 @@
                     android:id="@+id/revoke"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/montserrat_medium"
-                    android:text="Issue"
                     android:layout_marginStart="8dp"
                     android:layout_marginBottom="2dp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:text="Issue"
                     android:textColor="@color/green"
                     android:textSize="14sp" />
 
@@ -79,10 +81,13 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/line"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp"
             android:padding="0dp"
-            android:layout_margin="0dp"
-            android:layout_alignParentBottom="true"/>
+            android:src="@drawable/line" />
 
     </RelativeLayout>
 
