--- a/app/src/main/res/layout/saved_images_item_design.xml
+++ b/app/src/main/res/layout/saved_images_item_design.xml
@@ -12,11 +12,11 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:layout_width="53dp"
             android:id="@+id/historyPointCV"
+            android:layout_width="53dp"
             android:layout_height="40dp"
-            android:src="@drawable/video_image"
-            android:layout_marginTop="14dp"/>
+            android:layout_marginTop="14dp"
+            android:src="@drawable/video_image" />
 
 
         <RelativeLayout
