--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -143,7 +143,11 @@
         android:id="@+id/historyFragment"
         android:name="ps.room.redcard.HistoryFragment"
         android:label="fragment_history"
-        tools:layout="@layout/fragment_history" />
+        tools:layout="@layout/fragment_history" >
+        <action
+            android:id="@+id/action_historyFragment_to_historyDetailsFragment"
+            app:destination="@id/historyDetailsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/downloadImageFragment"
         android:name="ps.room.redcard.DownloadImageFragment"
@@ -167,4 +171,9 @@
             android:id="@+id/action_savedImagesFragment_to_downloadImageFragment"
             app:destination="@id/downloadImageFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/historyDetailsFragment"
+        android:name="ps.room.redcard.HistoryDetailsFragment"
+        android:label="fragment_history_details"
+        tools:layout="@layout/fragment_history_details" />
 </navigation>
