--- a/app/src/main/res/layout/saved_images_item_design.xml
+++ b/app/src/main/res/layout/saved_images_item_design.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/historyPointCV"
+            android:id="@+id/SavedImage"
             android:layout_width="53dp"
             android:layout_height="40dp"
             android:layout_marginTop="14dp"
@@ -30,7 +30,7 @@
                 android:layout_marginTop="6dp">
 
                 <TextView
-                    android:id="@+id/invigilatorSpNoDisplay"
+                    android:id="@+id/SavedImageName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
